syntax = "proto2";
option java_package = "com.github.sosozhuang.protobuf";
option java_outer_classname = "Chat";

enum MessageType {
    CHAT = 0;
    LOGIN = 1;
    LOGOUT = 2;
    UNREAD = 3;
    CONFIRM = 4;
    MEMBERS = 5;
}
message Message {
    required MessageType type = 1;
    required string group_id = 2;
    required uint64 server_id = 3;
    required string from_user = 4;
    optional string to_user = 5;
    optional string content = 6;
    required uint64 create_at = 7;
    repeated string members = 8;
}

message Group {
    required string id = 1;
    required string token = 2;
    required string owner = 3;
    required uint64 create_at = 4;
}

message Server {
    required string id = 1;
    required string host = 2;
    required uint32 port = 3;
    required uint64 start_at = 4;
    optional string config = 5;
}

message Access {
    required string group_id = 1;
    required string user = 2;
    optional uint64 timestamp = 3;
}

enum Gender {
    UNKNOWN = 0;
    MALE    = 1;
    FEMALE  = 2;
}

message User {
    required string name = 1;
    required Gender gender = 2;
    optional string avatar = 3;
    optional string birth = 4;
    optional bytes  description = 5;
}